FIX navbar z-index problem
Arregle el problema de que el navbar no se veía por un mal seteo del contenido.
Agregué lo mismo para reportes y tambien centre un loading.

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -2,6 +2,9 @@
   cursor: pointer;
   --background: var(--ion-background-color);
 }
+.header-div{
+  z-index: 1001 !important;
+}
 
 ion-alert.custom-alert {
   --backdrop-opacity: 0.7;
